@@ -3,17 +3,19 @@ package operations;
 import br.upe.operations.SubscriptionCRUD;
 import br.upe.pojos.Subscription;
 import org.junit.jupiter.api.*;
+
 import java.io.*;
 import java.nio.file.*;
 import java.time.*;
 import java.util.*;
+//import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-class SubscriptionCRUDTest {
+public class SubscriptionCRUDTest {
     private SubscriptionCRUD subscriptionCRUD;
-    private final String filePath  = ".\\state\\subscriptions.csv";
+    private final String filePath = ".\\state\\subscriptions.csv";
 
     @BeforeAll
     public void setup() {
@@ -26,8 +28,13 @@ class SubscriptionCRUDTest {
         Files.createFile(Paths.get(filePath));
     }
 
+    @AfterAll
+    public void tearDown() throws IOException {
+        //deleteDirectoryRecursively(Paths.get(".\\state"));
+    }
+
     @Test
-    void testCreateSubscription() throws IOException {
+    public void testCreateSubscription() throws IOException {
         Subscription subscription = new Subscription();
         subscription.setUuid(UUID.randomUUID());
         subscription.setSessionUuid(UUID.randomUUID());
@@ -37,11 +44,11 @@ class SubscriptionCRUDTest {
 
         List<String> lines = Files.readAllLines(Paths.get(filePath));
         assertEquals(1, lines.size());
-        assertTrue(lines.getFirst().contains(subscription.getUuid().toString()));
+        assertTrue(lines.get(0).contains(subscription.getUuid().toString()));
     }
 
     @Test
-    void testDeleteSubscription() throws IOException {
+    public void testDeleteSubscription() throws IOException {
         UUID uuidToDelete = UUID.randomUUID();
         Subscription subscription1 = new Subscription();
         subscription1.setUuid(uuidToDelete);
@@ -60,11 +67,11 @@ class SubscriptionCRUDTest {
 
         List<String> lines = Files.readAllLines(Paths.get(filePath));
         assertEquals(1, lines.size());
-        assertFalse(lines.getFirst().contains(uuidToDelete.toString()));
+        assertFalse(lines.get(0).contains(uuidToDelete.toString()));
     }
 
     @Test
-    void testUpdateSubscription() throws IOException {
+    public void testUpdateSubscription() throws IOException {
         UUID uuidToUpdate = UUID.randomUUID();
         Subscription original = new Subscription();
         original.setUuid(uuidToUpdate);
@@ -82,11 +89,11 @@ class SubscriptionCRUDTest {
 
         List<String> lines = Files.readAllLines(Paths.get(filePath));
         assertEquals(1, lines.size());
-        assertTrue(lines.getFirst().contains(updated.getDate().toInstant().toString()));
+        assertTrue(lines.get(0).contains(updated.getDate().toInstant().toString()));
     }
 
     @Test
-    void testReturnSubscriptionByUuid() {
+    public void testReturnSubscriptionByUuid() {
         UUID uuidToReturn = UUID.randomUUID();
         Subscription subscription = new Subscription();
         subscription.setUuid(uuidToReturn);
@@ -101,7 +108,7 @@ class SubscriptionCRUDTest {
     }
 
     @Test
-    void testReturnAllSubscriptions() {
+    public void testReturnAllSubscriptions() {
         Subscription subscription1 = new Subscription();
         subscription1.setUuid(UUID.randomUUID());
         subscription1.setSessionUuid(UUID.randomUUID());
@@ -118,4 +125,19 @@ class SubscriptionCRUDTest {
         Collection<Subscription> subscriptions = SubscriptionCRUD.returnSubscription();
         assertEquals(2, subscriptions.size());
     }
+// Provavelmente vai virar um de teste
+//    private void deleteDirectoryRecursively(Path path) throws IOException {
+//        if (Files.exists(path)) {
+//            try (Stream<Path> paths = Files.walk(path)) {
+//                paths.sorted(Comparator.reverseOrder())
+//                        .forEach(file -> {
+//                            try {
+//                                Files.delete(file);
+//                            } catch (IOException e) {
+//                                e.printStackTrace();
+//                            }
+//                        });
+//            }
+//        }
+//    }
 }
